chore: refactoring directories and documentations
